Bug 574940: refactor Code completion
  coede completion improvements

Change-Id: I54a68a948dacabba6607bd62be730aa6ecaa9f7e